--- a/notebooks/all.ipynb
+++ b/notebooks/all.ipynb
@@ -1998,7 +1998,7 @@
    "source": [
     "plot graphs to see acc and loss\n",
     "\n",
-    "we can see that the accuracy and loss are increasing with the number of epochs, no overfitting problem, thats good"
+    "we can see that the accuracy and loss are increasing with the number of epochs"
    ]
   },
   {
